[CSS Fix] Move z-index from "video only" splash css to splash.css

--- a/templates/themes/base/css/splash.css
+++ b/templates/themes/base/css/splash.css
@@ -161,6 +161,12 @@ video#bgvid {
     width: 590px;
 }
 
+/* Make sure Bootstrap "alert" message is always well displayed */
+.alert {
+    z-index: 999;
+    position: absolute;
+}
+
 /*** Media Queries ***/
 
 /* 1185px or less */
