--- a/templates/themes/base/css/video_splash.css
+++ b/templates/themes/base/css/video_splash.css
@@ -45,10 +45,3 @@ footer a, footer p {
 #logo a {
     color: #EEE;
 }
-
-
-/* Make sure Bootstrap "alert" message is always well displayed */
-.alert {
-    z-index: 999;
-    position: absolute;
-}
